src/snapshots/afrotd__parser__tests__interpretation_6.1.2_9.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 1
  - 2
index: 9
text: "Zu einem späten Zeitpunkt im Spiel stellt sich Team A zu einem Free Kick von der A-35 auf, während Team A mit zwei Punkten\nzurückliegt. Team A stellt sich zu einem Onside Kick auf. Das Kicking\nTeam hat sechs Spieler auf der linken Seite des Kickers und vier Spieler auf dessen rechter Seite. Kicker A90 hat sich zu dem Kick auf der\nlinken Seite der Formation aufgestellt. Als A90 anläuft, laufen auch die\nSpieler auf seiner linken Seite an. A90 stoppt abrupt und bleibt vor dem\nBall stehen, während die links befindlichen Spieler weiterlaufen und die\nTeam A-Restraining Line überqueren. Auch diese Spieler halten an und\nkehren hinter die Restraining Line zurück. Als sie sich hinter der Restraining Line befinden, dreht sich A90 schnell um und kickt den Ball\nauf die rechte Seite der Formation, während sich alle Team A-Spieler\nhinter ihrer Restraining Line befinden."
ruling: "Dead Ball Foul, 5Meterstrafe vom Succeeding Spot. Gemäß der Regel (Regel 6.1.2.c)\nmuss sich jeder Team A-Spieler, außer dem Kicker und einem potenziellen Ballhalter beim Kick hinter dem Ball befinden. Befinden sie sich\njenseits des Balles und der Ball wird gekickt, ist das eine Live Ball Foul\nfür ein Offside bei einem Free Kick. Gemäß der Interpretation begeht\nein Team A-Spieler ein Dead Ball Foul für ein Offside beim Free Kick,\nwenn er, nachdem der Ball freigegeben wurde, seine Restraining Line\nüberquert und sich dann zurück hinter seine Restraining Line begibt,\nbevor der Kick durchgeführt wird. Diese Interpretation gilt nicht für Situationen, wenn der Ball vom Kicking Tee fällt (Regel 6.1.2.d). Wenn\nder Ball vom Kicking Tee fällt, müssen die Schiedsrichter sofort abpfeifen und die Teams zurück hinter ihre Restraining Lines schicken."
