src/snapshots/afrotd__parser__tests__interpretation_6.2.2_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 2
  - 2
index: 1
text: "Ein Free Kick von der A-35 geht, unberührt von Team B, zwischen\nden Goallines ins Aus und Team A begeht ein Offside."
ruling: "Team\nB hat drei Optionen: Es kann eine 5-Meterstrafe vom Previous Spot\nakzeptieren, wobei Team A von der A-30 den Kickoff wiederholt, den\nBall an der B-35 am Inbounds Spot snappen oder den Ball nach einer 5Meterstrafe von dem Punkt, an dem der Ball ins Aus ging, am Inbounds\nSpot snappen."
