src/snapshots/afrotd__parser__tests__interpretation_6.2.2_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 2
  - 2
index: 4
text: "Free Kick von der A-35. B17 springt im Spielfeld hoch und ist\nder erste Spieler, der Team A’s Free Kick ergreift, während er sich noch\nin der Luft befindet. Er landet anschließend im Aus und hat den Ball in\nseinem Besitz."
ruling: "Kein Foul. Team B’s Ball an dem Punkt, an\ndem B17 mit dem Ball die Seitenlinie überquert. B17 berührt den Kick\ninbounds. Das Fangen ist nicht vollständig, aber dem Fangen geht die\nBerührung voraus (Regel 2.11.4). Die Regelung ist dieselbe, als wenn\nB17 auf dem Boden stehen würde (Regel 2.27.15)."
